--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crednosso-lojista",
+  "name": "clone-fixpay",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "aos": "^2.3.4",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.6.5",
+    "dr-vue-echarts": "^1.0.13",
+    "echarts": "^4.8.0",
+    "v-calendar": "^1.0.0-beta.23",
+    "v-mask": "^2.0.2",
+    "v-money": "^0.8.1",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
+    "vue-directive-tooltip": "^1.6.3",
+    "vue-echarts": "^5.0.0-beta.0",
+    "vue-recaptcha-v3": "^1.9.0",
     "vue-router": "^3.0.3",
+    "vue-session": "^1.0.0",
+    "vue-tabs-component": "^1.5.0",
+    "vue-toasted": "^1.1.28",
+    "vue-tooltip": "^0.1.0",
+    "vue2-touch-events": "^2.2.1",
+    "vuesax": "^3.11.13",
+    "vuetify": "^2.2.11",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -18,11 +40,18 @@
     "@vue/cli-plugin-eslint": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "babel-eslint": "^10.0.1",
+    "bootstrap-vue": "^2.12.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
+    "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-pug": "^1.0.7",
+    "vue-cli-plugin-vuetify": "^2.0.7",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -33,7 +62,12 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off",
+      "no-unused-vars": "off",
+      "no-unused-labels": "off",
+      "vue/no-side-effects-in-computed-properties": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
